--- a/app/views/request.html
+++ b/app/views/request.html
@@ -1,21 +1,13 @@
-<!-- *Begin SubNav-->
-<!-- *End SubNav-->
-
-
-
-
-<!-- *Begin Conetnt-->
-
-<!-- *Begin Callout-->
-<div class="callout" align="center">
-  <h1>THE WORLD OF HATTERAS</h1>
-  <hr>
-  <h5>Request Page.</h5>
-</div>
-<!-- *End Callout-->
-<div class="marketing-site-content-section">
+<!--*begin content-->
+    <div>
+         <label>Name:</label>
+         <input type="text" ng-model="yourName" placeholder="Enter a name here">
+         <hr>
+         <h1>Hello {{yourName}}!</h1>
+       </div>
+       <div class="marketing-site-content-section">
   <div class="marketing-site-content-section-img">
-    <img src="https://www.hatterasyachts.com/media/2196/21_hatteras_90my_salon3cropped.jpg" alt="" />
+    <img src="https://steelcase-res.cloudinary.com/image/upload/c_fill,dpr_auto,q_70,h_656,w_1166/v1528677562/www.steelcase.com/2018/06/11/18-0106775-1.jpg" alt="" />
   </div>
   <div class="marketing-site-content-section-block">
     <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
@@ -28,7 +20,9 @@
     <a href="#" class="round button small">learn more</a>
   </div>
   <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-    <img src="https://www.powerandmotoryacht.com/.image/t_share/MTUxNTM0NjcyOTQ0MzA5NDc4/prm_hatteras-m90-panacera.jpg" alt="" />
+    <img src="http://draftforarts.info/wp-content/uploads/2018/07/medium-size-of-living-room-ingredients-in-a-modern-style-furniture-interior-design-meaning.jpg" alt="" />
   </div>
 </div>
-<!-- *End Content-->
+
+
+    <!--*end content-->
