--- a/app/views/story.html
+++ b/app/views/story.html
@@ -15,7 +15,7 @@
 <!-- *End Callout-->
 <div class="marketing-site-content-section">
   <div class="marketing-site-content-section-img">
-    <img src="https://www.hatterasyachts.com/media/2196/21_hatteras_90my_salon3cropped.jpg" alt="" />
+    <img src="https://cdn.hotelplanner.com/Common/Images/_HotelPlanner/Home-Page/fade/sld6.jpg" alt="" />
   </div>
   <div class="marketing-site-content-section-block">
     <h3 class="marketing-site-content-section-block-header">Yeti Snowcone Agency</h3>
@@ -28,7 +28,7 @@
     <a href="#" class="round button small">learn more</a>
   </div>
   <div class="marketing-site-content-section-img small-order-1 medium-order-2">
-    <img src="https://www.powerandmotoryacht.com/.image/t_share/MTUxNTM0NjcyOTQ0MzA5NDc4/prm_hatteras-m90-panacera.jpg" alt="" />
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS10oARpUsmmBAaA-H-Zwf54_UTNyfw2CJxr6lFeAJ6hIBsjlHJ" alt="" />
   </div>
 </div>
 <!-- *End Content-->
