--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .marketing-site-hero {
-  background: url("https://www.hatterasyachts.com/media/1502/motor-yachts-header.jpg?width=1903") top right no-repeat;
+  background: url("https://www.weisseducation.com/wp-content/uploads/2017/05/636162387608437176-598380448_travel-01.jpg") top right no-repeat;
   height: 65vh;
   background-size: cover;
   display: -webkit-flex;
