--- a/css/modal.css
+++ b/css/modal.css
@@ -41,7 +41,7 @@
 }
 
 .login-box-social-section {
-  background: url("https://images.pexels.com/photos/179124/pexels-photo-179124.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb");
+  background: url("https://images.miportalfinanciero.es/articles/850_400_destinos-paradisiacos-baratos_1498680460.jpg");
   background-size: cover;
   background-position: center;
 }
